--- a/HotelGarage/Views/Shared/_Layout.cshtml
+++ b/HotelGarage/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-inverse fixed-top">
-        @Html.ActionLink("Garage", "Parking", "Parking", null, new { @class = "navbar-brand" })
+        @Html.ActionLink("ABC's Garage", "Parking", "Parking", null, new { @class = "navbar-brand" })
         <button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -20,10 +20,10 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="nav navbar-nav">
                 <li class="nav-item">
-                    @Html.ActionLink("Nová rezervace", "Create", "Reservation", null, new { @class = "nav-link " })
+                    @Html.ActionLink("New reservation", "Create", "Reservation", null, new { @class = "nav-link " })
                 </li>
                 <li class="nav-item">
-                    @Html.ActionLink("Přehled Rezervací", "List", "Reservation", null, new { @class = "nav-link " })
+                    @Html.ActionLink("Reservation overview", "List", "Reservation", null, new { @class = "nav-link " })
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
